# Ehviewer_CN_SXJ

./: .gitignore  NOTICE  NOTICE.html  README.md  azure-pipelines.yml  build.gradle  gradle.properties  settings.gradle  test.key
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/res/values-en/: strings.xml
app/src/debug/res/xml-v25/: shortcuts.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: requestOverride.js
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gif/: config.h  dgif_lib.c  egif_lib.c  gif_err.c  gif_hash.c  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.c  native-lib.cpp  quantize.c
app/src/main/res/anim/: accelerate_quart.xml  decelerate_quart.xml  decelerate_quint.xml  decelerate_terz.xml  pop_enter.xml  pop_exit.xml  scene_close_enter.xml  scene_close_exit.xml  scene_open_enter.xml  scene_open_exit.xml
app/src/main/res/color/: content_reactive_black.xml  content_reactive_dark.xml  content_reactive_light.xml  primary_text_material_black.xml
app/src/main/res/drawable/: big_download.xml  big_filter.xml  big_history.xml  big_label.xml  big_sad_pandroid.xml  big_search.xml  bottom_popup_shape.xml  default_avatar.xml  divider_gallery_detail_dark.xml  divider_gallery_detail_light.xml  fingerprint_success.xml  home_item_shape.xml  ic_baseline_bookmarks_24.xml  ic_baseline_filter_1_24.xml  ic_baseline_filter_24.xml  ic_baseline_filter_2_24.xml  ic_baseline_filter_3_24.xml  ic_baseline_filter_4_24.xml  ic_baseline_filter_5_24.xml  ic_baseline_filter_6_24.xml  ic_baseline_filter_7_24.xml  ic_baseline_filter_8_24.xml  ic_baseline_filter_9_24.xml  ic_baseline_filter_9_plus_24.xml  ic_baseline_filter_none_24.xml  ic_eh_news_24.xml  (+92 more)
app/src/main/res/drawable-v21/: v_download_x16.xml
app/src/main/res/drawable-v25/: ic_shortcut_start.xml  ic_shortcut_stop.xml
app/src/main/res/drawable-v26/: ic_shortcut_start.xml  ic_shortcut_stop.xml
(+767 files in other folders)
